objects/QaObj3__c.object
<CustomObject>
    <description>Add Desc and edit test</description>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lookfield1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QaObj3s</relationshipLabel>
        <relationshipName>QaObj3s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasterField1__c</fullName>
        <description>Test456</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QaObj3s (Account)</relationshipLabel>
        <relationshipName>QaObj3s1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>QaObj3</label>
    <nameField>
        <label>QaObj3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QaObj3s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>